# advent-of-code-2025

./: .gitignore  README.md  fetch_inputs.sh  flake.nix
day01/: flake.nix  main.py
day02/: flake.nix  main.go
day03/: flake.nix
day03/src/: main.rs
day04/: day04.cabal  flake.nix
day04/app/: Main.hs
day05/: flake.nix  main.fs
day06/: Makefile  flake.nix  main.kt
