cabal-version:      3.0
name:               day04
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day04
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, containers
    default-language: GHC2021